--- a/prj_site-1/css/style.css
+++ b/prj_site-1/css/style.css
@@ -112,3 +112,51 @@ nav ul li a:link, nav ul li a:visited {
 	border-bottom:	none;
 	font-weight:	bold;}
 nav ul li.selected {background-color:	#c8b99c;}
+
+/* GRID */
+
+.grid {
+	border: 2px blue solid;
+	/*width: 400px;*/
+	height: 500px;
+	display: grid;
+	/*grid-template-columns: 100px 50% 200px;
+	grid-template-rows: 40% 50% 50px;*/
+	/*grid-template: 40% 50% 50px / 100px 50% 200px;*/
+	/*grid-template: 1fr 1fr 1fr / 3fr 50% 1fr;*/
+	/*grid-template: repeat(3, 1fr) / 3fr 50% 1fr;*/
+	/*grid-template: repeat(3, 1fr) / 3fr minmax(50px, 300px) 1fr;*/
+	grid-template: repeat(4, 1fr 2fr) / repeat(4, 3fr 2fr);
+	/*grid-row-gap: 20px;
+	  grid-column-gap: 5px;*/
+	  grid-gap: 20px 5px;
+}
+  
+.a {
+	/*grid-row-start: 5;
+	grid-row-end: 7;*/
+	/*grid-row: 5 / 7;
+	grid-column: 1 / span 2;*/
+	grid-area: 5 / 1 / span 2 / span 2;
+}
+/*.a {
+	grid-column-start: 1;
+	grid-column-end: span 2;
+	grid-row-start: 1;
+	grid-row-end: 3;
+  }*/
+
+.b {
+	/*grid-column: 2 / span 6;
+	grid-row: 2 / span 3;*/
+	grid-area: 2 / 2 / span 3 / span 6;
+}
+.c {
+	grid-area: 6 / 8 / span 3 / span 1;
+}
+.box {
+	background-color: beige;
+	color: black;
+	border-radius: 5px;
+	border: 2px dodgerblue solid;
+}
