--- a/css/table.css
+++ b/css/table.css
@@ -85,4 +85,19 @@ th, td {
   text-align: left;
   width: 33.3333%;
 }*/
-
+/* Zebra striping */
+tbody tr:nth-child(2n) {
+  background:#f0f3f5;
+}
+  
+tbody:hover > tr td {
+  opacity: 0.5;
+  color:transparent;
+  text-shadow: 0px 0px 2px rgba(0,0,0,0.8);
+}
+  
+tbody:hover > tr:hover td {
+  text-shadow: none;
+  color:#2d2d2d;
+  opacity: 1.0;
+}
