--- a/prj_lnk/css/table.css
+++ b/prj_lnk/css/table.css
@@ -29,31 +29,6 @@ td:hover/*, th:hover*/ {
   margin:auto;
 }
 
-.figu_tbl {
-  /*display: inline-block;/*block*/
-  border: 1px solid #fff;
-  padding: 0 6px;
-  float: left;
-  width: 24,99999%;/*200px*/
-}
-/*.figu-tbl:hover {}*/
-.figu_tbl img{
-	width: 100%;/*300px*/
-	height: auto;/*100*/
-}
-/*figcaption see in img.css*/
-@media only screen and (max-width: 700px) {
-  .figu_tbl {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-@media only screen and (max-width: 500px) {
-  .figu_tbl /*responsive*/ {
-    width: 100%;
-  }
-}
-
 /*Link gallery*/
 .table-link_gallery{
   table-layout: auto;
@@ -68,13 +43,14 @@ td:hover/*, th:hover*/ {
 /* End of Link gallery*/
 
 /* GRID */
-.t_grid {
+.grid {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  /*align-items: center;*/
   /*background-color: #2196F3;*/
-  grid-gap: 10px;
-  padding: 5px;
-}
+  grid-gap: 1rem;
+  padding: 4rem 2rem;}
+
 .t_dt {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
