--- a/cssLib/tm_grid.css
+++ b/cssLib/tm_grid.css
@@ -22,3 +22,10 @@ repeat(4, calc(100% / 4)*/
         grid-template-columns: repeat( 12, minmax(250px, 1fr) );
             grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
 }
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    /*align-items: center;*/
+    /*background-color: #2196F3;*/
+    grid-gap: 1rem;
+    padding: 4rem 2rem;}
