--- a/prj_lnk/css/style.css
+++ b/prj_lnk/css/style.css
@@ -5,13 +5,12 @@
 @import url("txt.css");
 @import url("color.css");
 
+
 *, *::before, *::after {
   box-sizing:border-box;
   -moz-box-sizing: border-box; 
   -webkit-box-sizing: border-box;
 }
-
-
 
 .clearfix:after, .row::after {
   content: "";
@@ -30,7 +29,7 @@ body{
   font-size: 100%;
   justify-content: center;}
 
-.content_lnk {
+.content {
   max-width: 1200px;
   margin: 0 auto;
   box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);
@@ -40,7 +39,7 @@ body{
 .aside {
   background-color: hsla(209, 82%, 58%, 0.5);
   padding: 13px;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
   font-size: 14px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.2);
@@ -67,16 +66,42 @@ body{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-gap: 1rem;
+  padding: 0 1rem;
 }
-.grid_card {
+.grid-card {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-gap: .5rem;
   align-items: flex-start;
 }
-/***COLOR***/
+/*** COLOR ***/
 .color_bg_white_glass {
   background-color: rgba(255, 255, 255, 0.2);
 }
+/*** LINKS ***/
 
-/***LINKS***/
+/*** Style the tab ***/
+.tab{
+  overflow: hidden;
+  /*border: 1px solid #ccc;*/
+  /*background-color: #f1f1f1;*/
+}
+.tab button {
+  /*background-color: inherit;*/
+  float: left;
+  border: 1px solid rgb(116, 13, 235);
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  margin-left: 5px;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+.tab button:hover {
+  background-color: #ddd;
+}
+.tab button.active {
+  /*background-color: #ccc;*/
+}
+.tab-content { display: none; }
+summary {cursor: pointer;}
