--- a/prj_lnk/css/txt.css
+++ b/prj_lnk/css/txt.css
@@ -1,27 +1,27 @@
 article{
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
-h1, h2{
-  text-align: center;
-  text-transform: uppercase;
-  font-family: "Copperplate Gothic Light", serif;
-  color: aliceblue;
-/*"Lucida Console", Castellar*/
-  background-color: hsla(180, 100%, 25%, 0.4);
-/*rgba(0,128,128,0.4)*/
-  border-radius: 50px 20px;
-  /*clear: both;*/
-}
-h3, h4, h5, h6{
+h1{text-align: center;}
+h2{
   font-family: Algerian, serif;
   text-align: right;
+  text-transform: uppercase;
+  color: aliceblue;
+  /*border-bottom: 3px solid #fff;*/
+/*"Lucida Console", Castellar*/
+/*rgba(0,128,128,0.4)*/
+}
+h3, h4, h5, h6{
+  font-family: "Copperplate Gothic Light", serif;
+  text-align: center;
   border-left: 6px solid red;
   border-right: 6px solid red;
-  background-color: hsla(0, 0%, 83%, 0.6);
+  /*background-color: hsla(0, 0%, 83%, 0.6);*/
+  background-color: hsla(180, 100%, 25%, 0.4);
+  border-radius: 50px 20px;
 /*rgba(211,211,211,0.5)*/
-	color: #000;
+  color: aliceblue;
 	padding-right: 5%;}
 h1{font-size: 2em;}
 h2{font-size: 1.5em;}
