--- a/prj_lnk/css/style.css
+++ b/prj_lnk/css/style.css
@@ -105,8 +105,14 @@ summary {cursor: pointer;}
 
 /*** Other ***/
 .shadow-white {
-  box-shadow: 0 1px 3px rgba(235, 225, 225, 0.5), 0 1px 2px rgba(255, 255, 255, 0.7);
+  /*box-shadow: 0 1px 3px rgba(235, 225, 225, 0.5), 0 1px 2px rgba(255, 255, 255, 0.7);*/
+  box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
+  -webkit-box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
+  -moz-box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
 }
-.shadow-black {
-  box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);
+.shadow {
+  /*box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);*/
+  box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
+  -moz-box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
 }
