--- a/prj_lnk/css/style.css
+++ b/prj_lnk/css/style.css
@@ -11,16 +11,15 @@
   -webkit-box-sizing: border-box;
 }
 
-
-
 .clearfix:after, .row::after {
   content: "";
   display: table;
   clear: both;
-  /*margin: auto;*/
 }
 
 html {font-family: "Comic Sans MS", "Century Gothic", sans-serif;}
+
+/*** Layout ***/
 body{
   background: hsla(247, 96%, 11%, 0.5) url("../../img/background/night_sky.jpg") no-repeat fixed center;
   /*"../../img/background/tree_4.jpg"*/
@@ -30,7 +29,7 @@ body{
   font-size: 100%;
   justify-content: center;}
 
-.content_lnk {
+.content {
   max-width: 1200px;
   margin: 0 auto;
   box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);
@@ -40,17 +39,17 @@ body{
 .aside {
   background-color: hsla(209, 82%, 58%, 0.5);
   padding: 13px;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
   font-size: 14px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.2);
 }
 
-.card {
+/*.card {
   margin: 8px 0;
   padding: 10px 20px;
   box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);
-}
+}*/
 .card:first-child {
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -60,23 +59,60 @@ body{
   border-bottom-right-radius: 30px;
 }
 
-.color_bg_white_glass {
-  background-color: rgba(255, 255, 255, 0.9);
-}
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-gap: 1rem;
+  padding: 0 1rem;
 }
-.grid_card {
+.grid-card {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-gap: .5rem;
   align-items: flex-start;
 }
-/***COLOR***/
-.color_bg_white_glass {
-  background-color: rgba(255, 255, 255, 0.2);
-}
+/*** COLOR ***/
 
-/***LINKS***/
+/*** LINKS ***/
+
+/*** Style the tab ***/
+.tab{
+  overflow: hidden;
+  /*border: 1px solid #ccc;*/
+  /*background-color: #f1f1f1;*/
+}
+.tab button {
+  /*background-color: inherit;*/
+  float: left;
+  border: 1px solid rgb(116, 13, 235);
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  margin-left: 5px;
+  border-radius: 30px;
+  transition: 0.3s;
+}
+.tab button:hover {
+  background-color: #ddd;
+}
+.tab button.active {
+  /*background-color: #ccc;*/
+}
+.tab-content { display: none; }
+
+/*** Cursor ***/
+summary {cursor: pointer;}
+
+/*** Other ***/
+.shadow-white {
+  /*box-shadow: 0 1px 3px rgba(235, 225, 225, 0.5), 0 1px 2px rgba(255, 255, 255, 0.7);*/
+  box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
+  -webkit-box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
+  -moz-box-shadow: 2px 4px 4px 2px rgba(255,255,255,0.7);
+}
+.shadow {
+  /*box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);*/
+  box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
+  -moz-box-shadow: 2px 4px 4px 2px rgba(0,0,0,0.7);
+}
