--- a/prj_lnk/css/color.css
+++ b/prj_lnk/css/color.css
@@ -1,3 +1,4 @@
-.color_bg-white-glass_30 {background-color: rgba(255, 255, 255, 0.3);}
-.color_bg-white-glass_10 {background-color: rgba(158, 38, 38, 0.1);}
+.color_bg-white-glass-30 {background-color: rgba(255, 255, 255, 0.3);}
+.color_bg-white-glass-10 {background-color: rgba(255, 255, 255, 0.1);}
+.color_bg-dark_red-glass-10 {background-color: rgba(160, 39, 39, 0.1);}
  
