--- a/cssLib/tm_layout_col.css
+++ b/cssLib/tm_layout_col.css
@@ -59,3 +59,47 @@
   max-width: 960px;
   margin: auto;
   padding: 20px;}
+/*div {
+  width:300px;
+  margin: auto;
+  border: 1px solid red;}*/
+body{
+  background: hsla(247, 96%, 11%, 0.7) url("../../img/background/tree_4.jpg") no-repeat fixed center;
+  color: #beb8cc;
+  font-family: "Comic Sans MS", "Century Gothic", sans-serif;
+/*"Times New Roman", Times, Consolas, serif*/
+  font-size: 100%;
+  justify-content: center;}
+.left, .right {
+  /*background-color:#2196F3;*/
+  padding:20px;
+  float: left;
+  width: 20%; /* The width is 20%, by default */}
+
+.main/*, .content*/ {
+  /*background-color:#f1f1f1;*/
+  padding:20px;
+  float: left;
+  width: 60%; /* The width is 60%, by default */}
+.right {
+  /*background-color:#4CAF50;*/
+  padding:20px;}
+
+/* Use Media Query to add a breakpoint at 800px: */
+@media screen and (max-width:800px) {
+  .left , .main, .right {width:100%;}
+}
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+.aside {
+  background-color: hsla(209, 82%, 58%, 0.5);
+  padding: 13px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
