--- a/cssLib/tm_layout_col.css
+++ b/cssLib/tm_layout_col.css
@@ -63,13 +63,20 @@
   width:300px;
   margin: auto;
   border: 1px solid red;}*/
-body{
-  background: hsla(247, 96%, 11%, 0.7) url("../../img/background/tree_4.jpg") no-repeat fixed center;
-  color: #beb8cc;
-  font-family: "Comic Sans MS", "Century Gothic", sans-serif;
-/*"Times New Roman", Times, Consolas, serif*/
-  font-size: 100%;
-  justify-content: center;}
+
+  /*font-family: "Comic Sans MS", "Century Gothic", sans-serif;
+"Times New Roman", Times, Consolas, serif*/
+
+
+  body{
+    background: hsla(247, 96%, 11%, 0.5) url("../../img/background/night_sky.jpg") no-repeat fixed center;
+    /*"../../img/background/tree_4.jpg"*/
+    background-size: cover;
+    color: #beb8cc;
+    /*"Times New Roman", Times, Consolas, serif*/
+    font-size: 100%;
+    justify-content: center;}
+
 .left, .right {
   /*background-color:#2196F3;*/
   padding:20px;
