--- a/prj_lnk/css/style.css
+++ b/prj_lnk/css/style.css
@@ -21,16 +21,15 @@ html {font-family: "Comic Sans MS", "Century Gothic", sans-serif;}
 /*** Layout ***/
 body{
   background: hsla(247, 96%, 11%, 0.5) url("../../img/background/night_sky.jpg") no-repeat fixed center;
-  /*"../../img/background/tree_4.jpg"*/
   background-size: cover;
   color: #beb8cc;
-  /*"Times New Roman", Times, Consolas, serif*/
   font-size: 100%;
   justify-content: center;}
 
 .content {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 10px;
   box-shadow: 0 1px 3px rgba(14, 9, 9, 0.5), 0 1px 2px rgba(0, 0, 0, 0.7);
   border-radius: 30px;
 }
