--- a/prj_lnk/css/txt.css
+++ b/prj_lnk/css/txt.css
@@ -8,6 +8,9 @@ h2{
   text-align: right;
   text-transform: uppercase;
   color: aliceblue;
+  /*text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;*/
+  text-shadow: 4px 4px 4px rgba(255, 200, 255, 1);
+  /*rgba(0, 93, 150, 1);*/
   /*border-bottom: 3px solid #fff;*/
 /*"Lucida Console", Castellar*/
 /*rgba(0,128,128,0.4)*/
