--- a/prj_lnk/css/menuNlinks.css
+++ b/prj_lnk/css/menuNlinks.css
@@ -17,6 +17,61 @@
   font-size: 1.5em;
   text-align: center;}
 
+/* The Overlay (background) */
+.menu-overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+  height: 0%;
+  width: 100%;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+  overflow-y: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+/* Position the content inside the overlay */
+.menu-overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  text-align: center; /* Centered text/links */
+  margin: 0 auto;
+  width:15%;
+}
+
+/* The navigation links inside the overlay */
+.menu-overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.menu-overlay a:hover, .menu-overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.menu-overlay .close-btn {
+  position: absolute;
+  top: 50%;/*20px;*/
+  right: 35%;/*45px;*/
+  font-size: 60px;
+}
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;}
+  .overlay a {font-size: 20px}
+  .menu-overlay .close-btn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
   /*LINKS*/
 /*a{
   text-decoration:none;
@@ -42,7 +97,29 @@
 /*.btn_lnk_1:hover, .btn_lnk_1:active*/ .btn-after a:hover, a:active {
   background-color: hsla(130, 90%, 70%, 0.6);
   /*font-weight: bold;*/
+  -webkit-animation-name: btn; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 1s; /* Safari 4.0 - 8.0 */
+  animation-name: btn;
+  animation-duration: 1s;
 }
+@keyframes btn {
+  from {
+    -webkit-transform: rotateY(180deg); /* Safari prior 9.0 */
+    transform: rotateY(180deg); /* Standard syntax */}
+  to {
+    -webkit-transform: rotateY(360deg); /* Safari prior 9.0 */
+    transform: rotateY(360deg); /* Standard syntax */}
+}
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes btn {
+  from {
+    -webkit-transform: rotateY(0deg); /* Safari prior 9.0 */
+    transform: rotateY(0deg); /* Standard syntax */}
+  to {
+    -webkit-transform: rotateY(360deg); /* Safari prior 9.0 */
+    transform: rotateY(360deg); /* Standard syntax */}
+}
+
 
 .pagination a{
   text-decoration: none;
