--- a/prj_site_1/css/site_1.css
+++ b/prj_site_1/css/site_1.css
@@ -55,9 +55,10 @@ section#main, section#blog {
 section#leftBar {
 	display:		table-cell;
 	background-color:	#efe5d0;
-	width:		20%
+	width:		20%;
 	padding:		15px;
 	vertical-align:	top;}
+
 aside {
 	display:		table-cell;
 	background:	#efe5d0 bottom right;
@@ -104,6 +105,7 @@ blockquote {font-style: italic;}
 	background-image:		url (images/background.gif);
 	background-repeat: no-repeat;
 	background-position: top left;}
+	
 .headingI {
 	text-align: center;
 	line-height: 1.8em;}
