--- a/prj_site_1/css/main.css
+++ b/prj_site_1/css/main.css
@@ -18,10 +18,10 @@
 }
 html {font-family: "Comic Sans MS", "Century Gothic", sans-serif;}
 
-header, footer, section, aside, nav, div {
+/*header, footer, section, aside, nav, div {
 	border-style: dotted;
 	border-color: red;
-}
+}*/
 
 body{
 	background: hsla(246, 73%, 10%, 0.8) url("../../img/bg/night_sky.jpg") no-repeat fixed center;
@@ -39,9 +39,13 @@ body{
 }
 header.top {
 	background: hsl(39, 18%, 39%, 0.7);
-	margin:		10px 10px 0px 10px;
+	/*margin:		10px 10px 0px 10px;*/
 	height:		108px;
 	border-radius: 30px;
+    padding: 5px 0;
+}
+header img{
+    border-radius: 30px;
 }
 #tableContainer {
 	display: table;
@@ -52,7 +56,7 @@ header.top {
 }
 section#main, section#blog {
 	display:		table-cell;
-	background: hsl(41, 49%, 88%);
+	/*background: hsl(41, 49%, 88%);*/
 	font-size:		105%;
 	padding:		15px;
 	vertical-align:	top;
@@ -61,7 +65,7 @@ section#main, section#blog {
 
 section#leftBar {
 	display:		table-cell;
-	background: hsl(41, 49%, 88%);
+	/*background: hsl(41, 49%, 88%);*/
 	width:		20%;
 	padding:		15px;
 	vertical-align:	top;
@@ -69,7 +73,7 @@ section#leftBar {
 
 aside {
 	display: table-cell;
-	background: hsl(41, 49%, 88%);
+	/*background: hsl(41, 49%, 88%);*/
 	font-size:		105%;
 	padding:		15px;
 	vertical-align:	top;
@@ -189,4 +193,10 @@ nav ul li.selected {background-color:	#c8b99c;}
 	color: black;
 	border-radius: 5px;
 	border: 2px dodgerblue solid;
+}
+
+p {
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    padding: 15px;
 }
