--- a/svelteDemo/src/app.css
+++ b/svelteDemo/src/app.css
@@ -48,13 +48,13 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 20px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ee7e0f;
   cursor: pointer;
   transition: border-color 0.25s;
 }
